# ftx-listener

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
db/: docker-compose.yaml
db/sql/: drop_create_tables.sql  load_data.sql
src/: infra.rs  main.rs
src/digestion/: mod.rs
src/ingestion/: data_schema.rs  ftx.rs  interval_stream.rs  mod.rs
src/my_ftx/: data_schema.rs  ingestion.rs  mod.rs
