[package]
name = "ftx-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = ">=0.9.1"
rdkafka = { version = ">=0.25", features = ["cmake-build"] }
futures = ">=0.3.19"
log = ">=0.4.14"
clap = ">=3.0.7"
serde = { version = "1.0.0", features = ["derive"] }
serde_derive = "1.0.0"
serde_json = "1.0.0"
tokio = { version = ">=1.0", features = ["full"]}
rand = ">=0.8.4"
chrono = ">=0.4.19"
env_logger = ">=0.9.0"