[package]
name = "ftx-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = ">=0.3.21"
log = ">=0.4.14"
clap = ">=3.1.0"
#serde = { version = ">=1.0.136", features = ["derive"] }
#serde_derive = ">=1.0.136"
serde_json = ">=1.0.79"
rust_decimal = {version = "^1.22.0", features = ["serde-float"]}
tokio = { version = ">=1.17", features = ["full"]}
rand = ">=0.8.5"
chrono = ">=0.4.19"
env_logger = ">=0.9.0"
#ftx = ">=0.4.4"
dotenv = ">=0.15.0"
tokio-postgres = ">=0.7.5"

[dependencies.ftx]
path = "../rust-crates/ftx"
